cmake_minimum_required(VERSION 3.4)
project(ctt)
add_definitions(-O0 -g3 -Wall -std=c++11)
aux_source_directory(. SRC)
if (WIN32)
  include_directories(include)
endif()
add_executable(${PROJECT_NAME} ${SRC})
add_library(mp3lame STATIC IMPORTED)
if (WIN32)
  set_target_properties(mp3lame PROPERTIES IMPORTED_LOCATION lib/libmp3lame.a)
else()
  set_target_properties(mp3lame PROPERTIES IMPORTED_LOCATION /usr/local/lib/libmp3lame.a)
endif()
target_link_libraries(${PROJECT_NAME} mp3lame pthread)
